--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node": ">=16"
   },
   "devDependencies": {
+    "@ltd/j-toml": "^1.38.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@types/glob": "^8.0.1",
