--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "dev": "vitest dev",
     "prepack": "pnpm run build",
     "test": "vitest run",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "bt": "pnpm run -s build && pnpm run -s test"
   },
   "engines": {
     "node": ">=16"
